<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PizzaActivity">

    <RadioGroup
        android:id="@+id/pizzaRadioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/flavorInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheese" />

        <RadioButton
            android:id="@+id/pepperoni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni" />

        <RadioButton
            android:id="@+id/mushroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom" />

        <RadioButton
            android:id="@+id/olive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olive" />
    </RadioGroup>

    <TextView
        android:id="@+id/flavorInfoTextView"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>