<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_slice" />

    <Button
        android:id="@+id/choosePizzaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_pizza"
        app:layout_constraintBottom_toTopOf="@+id/quantityButton"
        app:layout_constraintEnd_toEndOf="@+id/quantityButton"
        app:layout_constraintStart_toStartOf="@+id/quantityButton"
        app:layout_constraintTop_toBottomOf="@+id/pickDateButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/oderInfoTextView"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_order"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/pickDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        app:layout_constraintBottom_toTopOf="@+id/choosePizzaButton"
        app:layout_constraintEnd_toEndOf="@+id/choosePizzaButton"
        app:layout_constraintStart_toStartOf="@+id/choosePizzaButton"
        app:layout_constraintTop_toBottomOf="@+id/quantityTextView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/quantityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/enter_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePizzaButton" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oderInfoTextView" />

    <TextView
        android:id="@+id/pizzaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pizzaTextView"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>